--- a/IRISintegrateQuickstart.xcodeproj/xcshareddata/xcschemes/IRISintegrateQuickstart.xcscheme
+++ b/IRISintegrateQuickstart.xcodeproj/xcshareddata/xcschemes/IRISintegrateQuickstart.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1520"
+   LastUpgradeVersion = "1540"
    version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "15EFC97D28FD670A00E3FE5F"
-               BuildableName = "SighticQuickstart.app"
-               BlueprintName = "SighticQuickstart"
-               ReferencedContainer = "container:SighticQuickstart.xcodeproj">
+               BuildableName = "IRISintegrateQuickstart.app"
+               BlueprintName = "IRISintegrateQuickstart"
+               ReferencedContainer = "container:IRISintegrateQuickstart.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -44,9 +44,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "15EFC97D28FD670A00E3FE5F"
-            BuildableName = "SighticQuickstart.app"
-            BlueprintName = "SighticQuickstart"
-            ReferencedContainer = "container:SighticQuickstart.xcodeproj">
+            BuildableName = "IRISintegrateQuickstart.app"
+            BlueprintName = "IRISintegrateQuickstart"
+            ReferencedContainer = "container:IRISintegrateQuickstart.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -61,9 +61,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "15EFC97D28FD670A00E3FE5F"
-            BuildableName = "SighticQuickstart.app"
-            BlueprintName = "SighticQuickstart"
-            ReferencedContainer = "container:SighticQuickstart.xcodeproj">
+            BuildableName = "IRISintegrateQuickstart.app"
+            BlueprintName = "IRISintegrateQuickstart"
+            ReferencedContainer = "container:IRISintegrateQuickstart.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
